# moko

./: Cargo.toml  README.md  data.db  diesel.toml
migrations/2020-02-21-152228_file/: down.sql  up.sql
scripts/: gen_migration_sql.sh
src/app/: Cargo.toml
src/app/src/: lib.rs  main.rs
src/app/src/controllers/: file_controller.rs
src/app/src/mods/: error.rs  helper.rs
src/data/: Cargo.toml
src/data/src/: lib.rs  models.rs  repositories.rs  schema.rs
src/data/src/models/: files.rs  mod.rs
src/data/src/queries/: files.rs
src/domain/: Cargo.toml
src/domain/src/: repositories.rs
src/domain/src/files/: models.rs
src/domain/src/models/: files.rs
src/migration/: Cargo.toml
src/migration/src/: main.rs
