[package]
name = "moko-app"
version = "0.1.0"
authors = ["mofu"]
edition = "2018"

[[bin]]
name = "moko"
path = "src/main.rs"

[dependencies]
anyhow = "*"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-multipart = "0.2.0"
async-std = "1.5.0"
rand = "0.7.3"
serde = "1.0.104"
serde_json = "1.0.48"
chrono = "0.4.10"
serde_derive = "1.0.104"
