[package]
name = "moko-data"
version = "0.1.0"
authors = ["mofu"]
edition = "2018"

[dependencies]
anyhow = "*"
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["sqlite", "r2d2"] }
uuid = { version = "0.8.1", features = ["v4"] }
dotenv = "0.15.0"

domain = { package = "moko-domain", path = "../domain" }
r2d2 = "0.8.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
